--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Readex+Pro:wght@200;300;400;500;600;700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Comfortaa:wght@500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo+Play:wght@700;800;900&family=Comfortaa:wght@500;600;700&display=swap');
 @layer base {
     body {
       font-family: 'Readex Pro', sans-serif;
